--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html>
-    <!-- <style>
+    <style>
     
         main {
             padding-top: 50px; 
@@ -33,7 +33,7 @@
             padding: 10px 0;
             height: 50px; 
         }
-    </style> -->
+    </style>
     
 
     <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
