--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,29 @@ a {
 /*    padding-left: 2vw;*/
 }
 
+header {
+    position: fixed;
+    top: 0;
+    background-color: #8a2731;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    text-align: center;
+    padding: 10px 0;
+    height: 60px;
+}
 
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #8a2731;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    text-align: center;
+    padding: 10px 0;
+    height: 60px; 
+}
 
 
