--- a/assets/style.css
+++ b/assets/style.css
@@ -38,8 +38,9 @@ a {
 }
 
 main {
-    padding-top: 60px; 
-    padding-bottom: 60px; 
+    padding-top: 60px;
+    padding-bottom: 60px;
+    flex: 1;
 }
 
 header {
@@ -49,11 +50,10 @@ header {
     left: 0;
     right: 0;
     z-index: 1000;
-    text-align: center;
-    padding: 10px 0;
     height: 60px;
+    display: flex;
+    align-items: center;
 }
-
 
 footer {
     position: fixed;
@@ -62,9 +62,15 @@ footer {
     left: 0;
     right: 0;
     z-index: 1000;
-    text-align: center;
-    padding: 10px 0;
-    height: 60px; 
+    height: 60px;
+    display: flex;
+    align-items: center;
 }
 
+footer .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
 
