--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -10,7 +10,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
                     <!-- <li class="px-1 nav-item" data-page="publications"><a class="nav-link" href="publications.html">Publications</a></li> -->
-                    <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
+                    <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
                 </ul>
             </div>
         </div>
