--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,18 @@ footer .container {
     height: 100%;
 }
 
+.img-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; /* 1:1 纵横比 */
+    overflow: hidden;
+}
+
+.img-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
