--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -1,6 +1,6 @@
 <header>
-    <nav class="navbar navbar-expand-sm navbar-dark justify-content-center" style="background-color:#002D72;">
-        <a class="navbar-brand px-2" href="index.html">Yinkai Dong</a>
+    <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
+        <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
