--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,8 @@ header {
     right: 0;
     z-index: 1000;
     height: 60px;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
 }
 
 footer {
